Improvement of PATCH
Now you don't need to send the user id, you can only change the logged-in user
