# docs/swagger.json
@@ -335,9 +335,7 @@
             "$ref": "#/components/responses/404"
           }
         }
-      }
-    },
-    "/auth/user/{userId}": {
+      },
       "patch": {
         "tags": [
           "auts"
@@ -348,18 +346,6 @@
         "security": [
           {
             "bearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "userId",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "example": "65ca67e7ae7f10c88b598384"
-            },
-            "description": "The ID of the user to update."
           }
         ],
         "requestBody": {
